src/objects/Translated_Email__c.object
<CustomObject>
    <fields>
        <fullName>Email_Body__c</fullName>
        <label>Email Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Email_Template__c</fullName>
        <label>Email Template</label>
        <referenceTo>Email_Template__c</referenceTo>
        <relationshipLabel>Translated Emails</relationshipLabel>
        <relationshipName>Translated_Emails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>Arabic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese (simplified)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Translated Email</label>
    <nameField>
        <label>Translated Email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Translated Emails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>